--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "lesson-schedule-vk-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
+  },
+  "engines": {
+    "node": ">= 10.16.3"
   },
   "repository": {
     "type": "git",
